# cmake_helloworld

./: CMakeLists.txt  README.md  extractor.sh  index.sh  main.c  math.c  run.sh  server.sh
resources/js/: licenses.txt  main.js
